Fix Rows view on mobile

--- a/src/css/responsive.sass
+++ b/src/css/responsive.sass
@@ -107,6 +107,9 @@
 		div[class^="barter-item-"].barter-item-row
 			flex-direction: column
 
+			.row-holder
+				margin: 0 0 $r * 2
+
 /* Tablet */
 @media screen and (min-width: $phones) and (max-width: $tablet)
 	#app
